tests-integration/fixtures/checking/1772564640_derive_ord_1_higher_kinded/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
MkWrap ::
  forall (t :: Type) (@f :: (t :: Type) -> Type) (@a :: (t :: Type)).
    (f :: (t :: Type) -> Type) (a :: (t :: Type)) ->
    Wrap @(t :: Type) (f :: (t :: Type) -> Type) (a :: (t :: Type))
MkWrapNoOrd1 ::
  forall (t :: Type) (@f :: (t :: Type) -> Type) (@a :: (t :: Type)).
    (f :: (t :: Type) -> Type) (a :: (t :: Type)) ->
    WrapNoOrd1 @(t :: Type) (f :: (t :: Type) -> Type) (a :: (t :: Type))

Types
Wrap :: forall (t :: Type). ((t :: Type) -> Type) -> (t :: Type) -> Type
WrapNoOrd1 :: forall (t :: Type). ((t :: Type) -> Type) -> (t :: Type) -> Type

Derived
derive forall (t :: Type -> Type) (t1 :: Type).
  Eq1 (t :: Type -> Type) => Eq (t1 :: Type) => Eq (Wrap @Type (t :: Type -> Type) (t1 :: Type))
derive forall (t :: Type -> Type) (t1 :: Type).
  Ord1 (t :: Type -> Type) => Ord (t1 :: Type) => Ord (Wrap @Type (t :: Type -> Type) (t1 :: Type))
derive forall (t :: Type -> Type) (t1 :: Type).
  Eq1 (t :: Type -> Type) =>
  Eq (t1 :: Type) =>
  Eq (WrapNoOrd1 @Type (t :: Type -> Type) (t1 :: Type))
derive forall (t :: Type) (t1 :: Type -> Type).
  Ord (t :: Type) => Ord (WrapNoOrd1 @Type (t1 :: Type -> Type) (t :: Type))

Roles
Wrap = [Representational, Nominal]
WrapNoOrd1 = [Representational, Nominal]

Diagnostics
error[NoInstanceFound]: No instance found for: Ord1 (t :: Type -> Type)
  --> 14:1..14:46
   |
14 | derive instance Ord a => Ord (WrapNoOrd1 f a)
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  trivia: Ord (t1 :: Type) is in scope
  trivia: Eq (t1 :: Type) is in scope
error[NoInstanceFound]: No instance found for: Eq1 (t :: Type -> Type)
  --> 14:1..14:46
   |
14 | derive instance Ord a => Ord (WrapNoOrd1 f a)
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  trivia: Ord (t1 :: Type) is in scope
  trivia: Eq (t1 :: Type) is in scope
